# HiFiLES-solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.status  configure  configure.ac  configure_run.sh  libtool
autom4te.cache/: output.0  traces.0
include/: bc.h  bdy_inters.h  cubature_1d.h  cubature_hexa.h  cubature_pris.h  cubature_quad.h  cubature_tet.h  cubature_tri.h  cuda_kernels.h  eles.h  eles_hexas.h  eles_pris.h  eles_quads.h  eles_tets.h  eles_tris.h  error.h  flux.h  funcs.h  geometry.h  global.h  hf_array.h  input.h  int_inters.h  inters.h  matrix_structure.hpp  mesh.h  mesh_reader.h  mpi_inters.h  output.h  param_reader.h  probe_input.h  solution.h  solver.h  source.h  turbinlet.h  vector_structure.hpp  wall_model_funcs.h
lib/: Makefile.am
lib/parmetis-4.0.2/metis/include/: metis.h
src/: HiFiLES.cpp  bc.cpp  bdy_inters.cpp  cubature_1d.cpp  cubature_hexa.cpp  cubature_pris.cpp  cubature_quad.cpp  cubature_tet.cpp  cubature_tri.cpp  eles.cpp  eles_hexas.cpp  eles_pris.cpp  eles_quads.cpp  eles_tets.cpp  eles_tris.cpp  flux.cpp  funcs.cpp  geometry.cpp  global.cpp  input.cpp  int_inters.cpp  inters.cpp  matrix_structure.cpp  mesh.cpp  mesh_reader.cpp  mpi_inters.cpp  output.cpp  param_reader.cpp  probe_input.cpp  solver.cpp  source.cpp  wall_model_funcs.cpp
src/.deps/: ___bin_HiFiLES-HiFiLES.Po  ___bin_HiFiLES-bdy_inters.Po  ___bin_HiFiLES-cubature_1d.Po  ___bin_HiFiLES-cubature_hexa.Po  ___bin_HiFiLES-cubature_quad.Po  ___bin_HiFiLES-cubature_tet.Po  ___bin_HiFiLES-cubature_tri.Po  ___bin_HiFiLES-eles.Po  ___bin_HiFiLES-eles_hexas.Po  ___bin_HiFiLES-eles_pris.Po  ___bin_HiFiLES-eles_quads.Po  ___bin_HiFiLES-eles_tets.Po  ___bin_HiFiLES-eles_tris.Po  ___bin_HiFiLES-flux.Po  ___bin_HiFiLES-funcs.Po  ___bin_HiFiLES-geometry.Po  ___bin_HiFiLES-global.Po  ___bin_HiFiLES-input.Po  ___bin_HiFiLES-int_inters.Po  ___bin_HiFiLES-inters.Po  ___bin_HiFiLES-linear_solvers_structure.Po  ___bin_HiFiLES-matrix_structure.Po  ___bin_HiFiLES-mesh.Po  ___bin_HiFiLES-output.Po  ___bin_HiFiLES-probe_input.Po  ___bin_HiFiLES-solver.Po  ___bin_HiFiLES-source.Po  ___bin_HiFiLES-vector_structure.Po
testcases/euler/cylinder/: input_cylinder_inv
testcases/euler/stube/: input_shock_tube  shock_tube101.msh
testcases/navier-stokes/Taylor_Green_vortex/: input_TGV_SD_hex
testcases/navier-stokes/cylinder/: input_cylinder_visc
testcases/navier-stokes/shock_vortex/: input_shock_vortex  shock_vortex.neu
